# VT-PR

./: .gitignore  ATVP.txt  Como instalar e comandos.txt  README.md  binary.txt  commands.txt  fix.txt  install.bat  install.sh  pyinstaller.py  pyproject.toml  venv.cmd  version.py  vt.py
binaries/: N_m3u8DL-RE-samplefile.txt  mux_atmos.txt
scripts/: DsnpKidFix.py  GetVikiManifestFree.py  SimplifyISM.py
scripts/m3u8/m3u8/: model.py
scripts/protobuf3/: pyproject.toml
scripts/pywidevine/: pyproject.toml
scripts/pywidevine/pywidevine/: device.py
scripts/subby/: pyproject.toml
vinetrimmer/: vinetrimmer.py
vinetrimmer/commands/: dl.py
vinetrimmer/config/: __init__.py  vinetrimmer.yml
vinetrimmer/config/Services/: amazon.yml  appletvplus.yml  appletvplus1.yml  disneyplus.yml  hotstar.yml  hulu.yml  mubi.yml  netflix.yml  paramountplus.yml  sonyliv.yml  sunnxt.yml  viu.yml
vinetrimmer/devices/: hisense_smarttv_32e5600eu_sl3000.prd  hisense_smarttv_he55a7000euwts_sl3000.prd  hisense_smarttv_ltdn55k2203gwus_sl2000.prd  ktc_t31_43f_sl3000.prd  lg_electronics_inc_lg_webos_tv_w23a_sl3000_9c34a494.prd  mtc_mtc_atv_atv_sl3000.prd  qingdao_haier_electronics_coltd_led_tv_le42k5500_sl2000.prd  reprovision.bat
vinetrimmer/objects/: titles.py  tracks.py
vinetrimmer/parsers/: ism.py  m3u8.py  mpd.py
vinetrimmer/services/: BaseService.py  __init__.py  amazon.py  appletvplus.py  appletvplus1.py  appletvplus2.py  disneyplus.py  hotstar.py  hulu.py  itunes.py  jio.py  max.py  moviesanywhere.py  mubi.py  netflix.py  paramountplus.py  peacock.py  rakutentv.py  sonyliv.py  sunnxt.py  viu.py
vinetrimmer/utils/: __init__.py  click.py  gen_esn.py  io.py
vinetrimmer/utils/MSL/: __init__.py
vinetrimmer/utils/MSL/schemes/: EntityAuthentication.py  KeyExchangeRequest.py  PlayReadyKeyExchangeScheme.py  __init__.py
vinetrimmer/utils/widevine/: device.py  vmp.py
vinetrimmer/utils/widevine/protos/: widevine_pb2.py
