[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "protobuf3"
version = "3.20.2"
description = "protobuf3"
license = "CC BY-NC-ND 4.0"
authors = ["google"]
repository = "https://github.com/protocolbuffers/protobuf/"


[tool.poetry.urls]
"Issues" = "https://github.com/protocolbuffers/protobuf//issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.32.3"
